force-app/main/default/objects/Dev_DLI_Course__c/Dev_DLI_Course__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing: Captures details of all courses offered by the Deep Learning Institute (DLI).</description>
    <label>Dev DLI Course</label>
    <nameField>
        <displayFormat>Dev-DLIC-{0000000}</displayFormat>
        <label>Dev DLI Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev DLI Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>