force-app/main/default/objects/Dev_DLI_Course__c/fields/Content_Tags__c.field-meta.xml
<CustomField>
    <fullName>Content_Tags__c</fullName>
    <label>Content Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>