force-app/main/default/objects/Dev_DLI_Course__c/fields/Course_Duration__c.field-meta.xml
<CustomField>
    <fullName>Course_Duration__c</fullName>
    <label>Course Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>