force-app/main/default/objects/Dev_DLI_Course__c/fields/Course_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_English_Name__c</fullName>
    <label>Course English Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>