force-app/main/default/objects/Dev_DLI_Course__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <externalId>true</externalId>
    <label>Course ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>