force-app/main/default/objects/Dev_DLI_Course__c/fields/Course_Industry__c.field-meta.xml
<CustomField>
    <fullName>Course_Industry__c</fullName>
    <description>Captures DLI content tags based on the industry segment for which the course is targeted.</description>
    <label>Course Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>