force-app/main/default/objects/Dev_DLI_Course__c/fields/Course_Localization_Group__c.field-meta.xml
<CustomField>
    <fullName>Course_Localization_Group__c</fullName>
    <label>Course Localization Group</label>
    <length>64</length>
    <type>Text</type>
</CustomField>