force-app/main/default/objects/Dev_DLI_Course__c/fields/DLI_Offering__c.field-meta.xml
<CustomField>
    <fullName>DLI_Offering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLI Offering</label>
    <type>Checkbox</type>
</CustomField>