force-app/main/default/objects/Dev_DLI_Course__c/fields/Hands_On_Component__c.field-meta.xml
<CustomField>
    <fullName>Hands_On_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hands On Component</label>
    <type>Checkbox</type>
</CustomField>