force-app/main/default/objects/Dev_DLI_Course__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>